src/objects/Segment__c.object
<CustomObject>
    <fields>
        <fullName>Exclude_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <picklist>
            <picklistValues>
                <fullName>AND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOURCE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Segment</label>
        <referenceTo>Segment__c</referenceTo>
        <relationshipLabel>Segments</relationshipLabel>
        <relationshipName>Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Field_Name__c</fullName>
        <label>Report Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root Segment</label>
        <referenceTo>Segment__c</referenceTo>
        <relationshipLabel>Root Segments</relationshipLabel>
        <relationshipName>RootSegments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_ID__c</fullName>
        <label>Source ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Type__c</fullName>
        <label>Source Type</label>
        <picklist>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Segment</label>
    <nameField>
        <displayFormat>SEG-{000000}</displayFormat>
        <label>Segment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>